Resources/Lab 6 - Configure an application with a NGINX Ingress Controller/flightbookingsystem-apis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flightbookingsystemapis  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flightbookingsystemapis
  template:
    metadata:
      labels:
        app: flightbookingsystemapis
    spec:
      containers:
      - name: flightbookingsystemapis
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: flightbookingsystemapis  
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: flightbookingsystemapis
